# subject_tracking

./: .gitignore  README.md  robocam.gv
devel/: .catkin  .rosinstall  local_setup.sh
devel/lib/pkgconfig/: ik.pc  planning.pc
devel/share/ik/cmake/: ikConfig.cmake
devel/share/planning/cmake/: planningConfig.cmake
src/: CMakeLists.txt
src/aruco_pkg/: CMakeLists.txt
src/aruco_pkg/data/: calib_mtx_dist.pkl
src/aruco_pkg/scripts/: arucoTracker.py
src/aruco_pkg/src/: arucoTracker.py  cameraCalibration.py
src/baxter_ikfast_left_arm_plugin/: CMakeLists.txt  package.xml
src/ik_solver/: CMakeLists.txt  package.xml
src/ik_solver/launch/: ik_solver.launch  robocam.launch
src/ik_solver/src/: CustomIKSolver.py  IKSolver.cpp
src/ik_solver/srv/: SolveIK.srv  SolveIKSrv.srv
src/manipulator_sim/: CMakeLists.txt  package.xml
src/manipulator_sim/src/: arm_controller.py  path_planner.py
src/obj_tracking/: CMakeLists.txt  package.xml
src/obj_tracking/data/: calib_mtx_dist.pkl
src/obj_tracking/src/: cameraCalibration.py  imagePublisher.py  objTracker.py
src/object_movement/: CMakeLists.txt  package.xml
src/object_movement/models/ball/: model.urdf
src/object_movement/models/table/: model.sdf
src/object_movement/src/: simulate_movement.py  simulate_movement_gazebo.py  simulate_moving_subject.py
src/panda_moveit_config/: .setup_assistant  package.xml
src/panda_moveit_config/config/: panda.srdf  ros_controllers.yaml
src/planning/: CMakeLists.txt  package.xml
src/planning/src/: calibrate_arm.py  ik_solver.py  simulate_moving_subject.py
src/robot_controller/: CMakeLists.txt  package.xml
src/robot_controller/src/: robot_controller.py
src/robot_controller/src/ArduinoController/ArduinoController/: ArduinoController.ino
src/rviz_animator/: CMakeLists.txt  avc_plugin_description.xml  package.xml  plugin_description.xml
src/rviz_animator/launch/: robocam.launch
src/rviz_animator/models/: panda.urdf  robocam.urdf  robocam.xml
src/rviz_animator/msg/: Keyframe.msg  KeyframeMsg.msg  KeyframesMsg.msg
src/rviz_animator/rviz/: robocam.rviz
src/rviz_animator/src/: AnimationViewController.cpp  AnimationViewController.h  KeyframeTool.cpp  choreographer.py  ik_solver.py  kdl_pydoc.txt  keyframe.h  keyframe_tool.cpp  keyframe_tool.h  operator.py
src/subject_tracker/: CMakeLists.txt  package.xml
src/subject_tracker/src/: track_ball.py
