<?xml version="1.0"?>
<package>
  <name>ik_solver</name>
  <version>1.4.5</version>
  <description> This package uses trac_ik for solving IK on the Robocam arm</description>
  <maintainer email="j.singh@berkeley.edu">Jaiveer Singh</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>trac_ik_lib</build_depend>
  <build_depend>kdl_conversions</build_depend>
  <run_depend>trac_ik_lib</run_depend>
</package>