<?xml version="1.0"?>
<package format="2">
  <name>planning</name>
  <version>0.0.0</version>
  <description>A package for path planning to track and follow a moving object.</description>

  <maintainer email="ayush.jain@berkeley.edu">Ayush Jain</maintainer>

  <license>MIT</license>

  <author email="ayush.jain@berkeley.edu">Ayush Jain</author>
  <author email="j.singh@berkeley.edu">Jaiveer Singh</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>baxter_interface</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>baxter_core_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>baxter_interface</build_export_depend>
  <build_export_depend>moveit_msgs</build_export_depend>
  <build_export_depend>baxter_core_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <exec_depend>baxter_tools</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>baxter_interface</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>baxter_core_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>


</package>